--- a/SurveyForm.html
+++ b/SurveyForm.html
@@ -27,13 +27,43 @@
                 <input type="checkbox" id="Joes favorite places" name="Joes favorite places" value="Your Job">
                 <label for="Joes favorite places">Your Job</label>
 
-                <input type="checkbox" id="Joes favorite places" name="Joes favorite places" value="Space">
-                <label for="Joes favorite places">Space</label>
+                <input type="checkbox" id="Joes favorite places" name="Joes favorite places" value="The Moon">
+                <label for="Joes favorite places">The Moon</label>
 
                 <input type="checkbox" id="Joes favorite places" name="Joes favorite places" value="Your Doorstep at 2:30 A.M.">
                 <label for="Joes favorite places">Your Doorstep at 2:30 A.M.</label>
 
+                <p>Do you know Joe's last name?</p>
+                <input type="radio" id="Joes Last Name" name="Joes Last Name" value="Yes">
+                <label for="Joes Last Name">Yes</label>
+                <input type="radio" id="Joes Last Name" name="Joes Last Name" value="No">
+                <label for="Joes Last Name">No</label>
+
+                <p>Are you good pals with Joe</p>
+                <input type="radio" id="Good Pals" name="Good Pals" value="Yessiree">
+                <label for="Good Pals">Yessiree</label>
+
+                <p>Have you met Joe's family</p>
+                <select>
+                    <option>Please Select One</option>
+                    <option>Just Joe</option>
+                    <option>I've met his brother, Jo</option>
+                    <option>I've met his father, Joseph</option>
+                    <option>I've met his mother, Josephina</option>
+                    <option>I've met his sister, Jyo</option>
+                    <option>I've met the whole Joe Family Tree</option>
+                </select>
+
+                <p>Joe?</p>
+                <select>
+                    <option>Joe?</option>
+                    <option>MAMA?!?!</option>
+                    <option>papa???</option>
+                    <option>Joe Who?</option>
+                    <option>Joe.</option>
+                </select>
             </form>
+            
         </div>
 
     </body>
