--- a/SurveyForm.html
+++ b/SurveyForm.html
@@ -7,17 +7,17 @@
     <body>
         <div>
             <h1>THE BEST SURVEY (maybe of all time (perhaps))</h1>
-            <p>These sets of questionaires are going to test your knowledge about <i><b>JOE</b></i>. Please respond with honest answers (no 🧢).</p>
+            <p>These sets of questionaires are going to test your knowledge about <i><b>JOE</b></i>. Please respond with honest answers (no 🧢). This will determine your knowledge on Joe.</p>
 
             <form>
                 <input type="text" placeholder="Your Name" />
                 <input type="text" placeholder="Your Dog's Name (or cat)" />
                 <input type="text" placeholder="Your favorite food" />
-                <input type="text" placeholder="What is Joe's Name" />
-                <input type="text" placeholder="What is Joe's favorite food" />
-                <input type="text" placeholder="How old are you? (in dog years)" />
-                <input type="text" placeholder="How many teeth does Joe have" />
-                <input type="text" placeholder="Where does Joe live" />
+                <input type="text" placeholder="What is Joe's Name?" />
+                <input type="text" placeholder="What is Joe's favorite food?" />
+                <input type="text" placeholder="How old are you?" />
+                <input type="text" placeholder="What country is Joe from?" />
+                <input type="text" placeholder="Where does Joe live?" />
 
                 <p>Where have you seen Joe?</p>
 
@@ -42,6 +42,8 @@
                 <p>Are you good pals with Joe</p>
                 <input type="radio" id="Good Pals" name="Good Pals" value="Yessiree">
                 <label for="Good Pals">Yessiree</label>
+                <input type="radio" id="Good Pals" name="Good Pals" value="I need to get to know him better :(">
+                <label for="Good Pals">I need to get to know him better :(</label>
 
                 <p>Have you met Joe's family</p>
                 <select>
@@ -61,7 +63,8 @@
                     <option>papa???</option>
                     <option>Joe Who?</option>
                     <option>Joe.</option>
-                </select>
+                </select><br>
+                <button>Complete Survey</button>
             </form>
             
         </div>
