I forgot something, but its there now

--- a/SurveyForm.html
+++ b/SurveyForm.html
@@ -45,7 +45,7 @@
                 <input type="radio" id="Good Pals" name="Good Pals" value="I need to get to know him better :(">
                 <label for="Good Pals">I need to get to know him better :(</label>
 
-                <p>Have you met Joe's family</p>
+                <p>Have you met Joe's family?</p>
                 <select>
                     <option>Please Select One</option>
                     <option>Just Joe</option>
