meta for 3 pages :)

--- a/Animal.html
+++ b/Animal.html
@@ -2,11 +2,17 @@
 <html>
     <head>
         <title>CAT :)</title>
+        <meta name="description" content="My Website about CAT🐱">
+        <meta name="charset=" content="UTF-8">
+        <meta name="keywords" content="CAT, PET, Cute, fluffy, silly, naughty, little guys, goofer">
+        <meta name="authors" content="The Silly Little Guy (miles)">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="60">
 
     </head>
     <body>
         <div>
-            <h1><i>CAT🐱</i></h1>
+            <h1><i><b>CAT🐱</b></i></h1>
             <a href="https://en.wikipedia.org/wiki/Cat">CAT (READ IT)</a>
             <img src="image0.jpeg" width="500">
             <ul>
