--- a/SurveyForm.html
+++ b/SurveyForm.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>THE SURVEY >:)</title>
+        <meta name="description" content="THE ULTIMATE SURVEY ABOUT JOE">
+        <meta name="charset=" content="UTF-8">
+        <meta name="keywords" content="JOE, survery, Joe mama, Joe papa, Joseph, Joesephina, Jyo, Jo, The Jo Family Tree, Joey, John">
+        <meta name="authors" content="The Average Joe Connoisseur">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="500">
 
     </head>
     <body>
