--- a/UsingForms.html
+++ b/UsingForms.html
@@ -4,6 +4,12 @@
         <title>
             Forms (that's crazy!?!?!?!?!)
         </title>
+        <meta name="description" content="A very nice questionaire quiz about various factors of yourself :)">
+        <meta name="charset=" content="UTF-8">
+        <meta name="keywords" content="Forms, Survey, Among Us, Goofy, Questionaire">
+        <meta name="authors" content="Miles (sus)">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="420">
 
     </head>
     <body>
