lots of updates + grids

--- a/BoxModelShapes.html
+++ b/BoxModelShapes.html
@@ -10,8 +10,6 @@
         <div id="circle"></div>
         <div id="oval"></div>
         <div id="triangle"></div>
-        <div id="triangleborder"></div>
         
-
     </body>
-</html>
+</html>`
