--- a/gridflags.html
+++ b/gridflags.html
@@ -33,6 +33,20 @@
             <div id="thecross"></div>
             <div id="thesecondcross"></div>
         </div>
+        <div id="thailand">
+            <div id="bluecurry"></div>
+            <div id="redcurry"></div>
+            <div id="redcurry2"></div>
+            <div id="whitecurry"></div>
+            <div id="whitecurry2"></div>
+
+        </div>
+        <div id="uae">
+            <div id="desertred"></div>
+            <div id="desertgreen"></div>
+            <div id="desertwhite"></div>
+            <div id="desertblack"></div>
+        </div>
 
     </body>
 </html>
