--- a/gridflags.html
+++ b/gridflags.html
@@ -47,6 +47,20 @@
             <div id="desertwhite"></div>
             <div id="desertblack"></div>
         </div>
+        <div id="GREEK">
+            <div id="yogurtwhite1"></div>
+            <div id="yogurtwhite2"></div>
+            <div id="yogurtwhite3"></div>
+            <div id="yogurtwhite4"></div>
+            <div id="yogurtcross1"></div>
+            <div id="yogurtcross2"></div>
+        </div>
+        <div id="czechia">
+            <div id="rojo"></div>
+            <div id="blanco"></div>
+            <div id="TRINGLE"></div>
+        </div>
+        
 
     </body>
 </html>
