--- a/VaridataTypes(likepokemon)/Varidata.html
+++ b/VaridataTypes(likepokemon)/Varidata.html
@@ -6,6 +6,21 @@
 
     </head>
     <body>
+        <div>
+            <h1 id="title"></h1>
+            <h3 id="todoList"></h3>
+            <ol>
+                <li id="list1"></li>
+                <li id="list2"></li>
+                <li id="list3"></li>
+                <li id="list4"></li>
+                <li id="list5"></li>
+                <li id="list6"></li>
+                <li id="list7"></li>
+                <li id="list8"></li>
+            </ol>
+
+        </div>
 
     </body>
     <footer>
