--- a/VaridataTypes(likepokemon)/Varidata.html
+++ b/VaridataTypes(likepokemon)/Varidata.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <title>CODING POKEMON BATTLE (var types)</title>
-        <link hrel="stylesheet" href="Varidata.css">
+        <link rel="stylesheet" href="Varidata.css">
 
     </head>
     <body>
-        <div>
-            <h1 id="title"></h1>
-            <h3 id="todoList"></h3>
+        <h1 id="title"></h1>
+        <h3 id="todoListTitle"></h3>
+        <div id="list">
+            
             <ol>
                 <li id="list1"></li>
                 <li id="list2"></li>
@@ -18,9 +19,12 @@
                 <li id="list6"></li>
                 <li id="list7"></li>
                 <li id="list8"></li>
+                <li id="list9"></li>
             </ol>
 
         </div>
+        <img id="goofy" src="full-english-7355w-2.jpg" alt="BRITISH BREKFAST" width="700px" height="400px">
+        <div id="silly"></div>
 
     </body>
     <footer>
