--- a/funktions/funktions.html
+++ b/funktions/funktions.html
@@ -8,14 +8,42 @@
     <body>
         <div id="here"></div>
         <div>
-            <form>
-                <input type="number" id="children" placeholder="enter thine number">
-                <input type="text" id="name" placeholder="enter a name :)">
-                <input type="text" id="coordinates" placeholder="enter a location">
-                <input type="text" id="jobby" placeholder="enter a job">
-                <button onclick="tellFortune">Tell my Fortune</button>
-            </form>
+            <input type="number" id="children" placeholder="enter thine number"/>
+            <input type="text" id="name" placeholder="enter a name"/>
+            <input type="text" id="jobby" placeholder="enter a job"/>
+            <button onclick="tellFortune()">Tell my Fortune</button>
             <p id="fortune"></p>
+        </div>
+        <div>
+            <input type="number" id="catAge" placeholder="Enter cat age" />
+            <button onclick="calcCatAge()">Calculate Age</button>
+            <p id="cat-age"></p>
+        </div>
+        <div>
+            <input type="number" id="age" placeholder="Enter Thine Age"/>
+            <input type="number" id="amount-per-day" placeholder="Enter amount to eat per day"/>
+            <button onclick="calcSupply()">Calculate Supply</button>
+            <p id="supply"></p> 
+        </div>
+        <div>
+            <input type="number" id="radius" placeholder="Enter radius" />
+            <button onclick="calcCirc()">Calculate Circumference</button>
+            <p id="circumference"></p>
+        </div>
+        <div>
+            <input type="number" id="radius2" placeholder="Enter radius" />
+            <button onclick="calcArea()">Calculate Area</button>
+            <p id="area"></p>
+        </div>
+        <div>
+            <input type="number" id="celsius" placeholder="Enter celsius" />
+            <button onclick="celsiusToFahren()">Calculate Fahrenheit</button>
+            <p id="fahrenheit"></p>
+        </div>
+        <div>
+            <input type="number" id="fahrenheit2" placeholder="Enter fahrenheit" />
+            <button onclick="fahrenToCelsius()">Calculate Celsius</button>
+            <p id="celsius2"></p>
         </div>
 
     </body>
