--- a/The Great Event/GreatEvent.html
+++ b/The Great Event/GreatEvent.html
@@ -8,10 +8,14 @@
     <body>
         <h1 id="greeting">Hello World</h1>
         <div id="color"></div>
-        <div id="squash">Don't scroll the page</div>
-        <div id="wheel"></div>
-        <div id="theGreatDeleter">Right Click this to turn on The Great Deleter™©®</div>
+        <div id="squash">Please do not squash me (press the mouse down)</div>
+        <div id="wheel"> No Scrolling >:)</div>
         <div id="scaredFellow">I'm so happy my home will never be copied :)</div>
+        <div id="sillydiv">
+            <input type="text" id="letterHater" placeholder="DO NOT PUT ANY LETTERS IN HERE (I disklike them)">
+        </div>
+        <div id="theGreatDeleter">Right Click this to turn on The Great Deleter™©®</div>
+        
         
 
     </body>
