--- a/TheThreeBudgetiers/ThreeBudgetiers.html
+++ b/TheThreeBudgetiers/ThreeBudgetiers.html
@@ -11,6 +11,21 @@
             <h4>INCOME</h4>
             <input type="number" id="incomeInput" placeholder="Place Income Within">
             <h4>EXPENSES</h4>
+            <input type="number" id="expenseInput" placeholder="Place Expenses Within">
+            <input type="number" id="expenseInput2" placeholder="Place Expenses Within">
+            <input type="number" id="expenseInput3" placeholder="Place Expenses Within">
+            <input type="number" id="expenseInput4" placeholder="Place Expenses Within">
+            <input type="number" id="expenseInput5" placeholder="Place Expenses Within">
+            <input type="number" id="expenseInput6" placeholder="Place Expenses Within">
+            <button onclick="makeBudget()">Submit :)</button>
+            <h2 id="MunsRemaining"></h2>
+        </div>
+        <div>
+            <ul>
+                <li id="advice1"></li>
+                <li id="advice2"></li>
+                <li id="advice3"></li>
+            </ul>
         </div>
 
     </body>
