Hey Miles -Elena

--- a/Fnaf/lore.html
+++ b/Fnaf/lore.html
@@ -6,9 +6,57 @@
 
     </head>
     <body>
+        <div>
+            <h1>The Lore...</h1>
+            <nav>
+                <a href="BiteO87.html">The Bite of 87</a>
+                <a href="fnaf.html">Home</a>
+                <a href="lore.html">The Lore</a>
+            </nav>
+        </div>
+        <div>
+            <h2>The origins...</h2>
+            <p>
+                Once upon a time, there were two silly guys and they owned a company with a pet bear. One day, this bear died
+                and they got a robot to replace it. This was freddy. Then they made more (the rest of them). But, the purple guy was very angry and went
+                on a spree and "accidently" made ghost children who haunted the robots. Now they try to eat you (the never got a last supper).
+            </p>
+        </div>
+        <div>
+            <h2>The story</h2>
+            <p>
+                According to a certain Mathew Patrick from the Game Theorists on the hit platfrom Youtube, now owned by Google.You play
+                 as silly michael. This man is the son of the purple dude who, at them time, was a robot himself. Eventually he found his sister
+                (also a robot) and got ""Scooped"". Now he is also purple and trying to hunt his dad down to release the souls from the silly robots
+                But turns out, his dad's favorite catch phrase "i always come back" prevents him from this :(
+            </p>
+        </div>
+        <div>
+            <h2>Fun FNAF Facts</h2>
+            <ul>
+                <li>He Always comes back</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
 
     </body>
     <footer>
         <script src="lore.js"></script>
+        <div>
+            <nav>
+                <a href="BiteO87.html">The Bite of 87</a>
+                <a href="fnaf.html">Home</a>
+                <a href="lore.html">The Lore</a>
+            </nav>
+        </div>
+        <div>
+            <h4>Contact info</h4>
+            <p>Email@fnafsillyguys.gov</p>
+            <p>333-333-3333</p>
+        </div>
     </footer>
 </html>
