--- a/Fnaf/fnaf.html
+++ b/Fnaf/fnaf.html
@@ -49,18 +49,20 @@
     </body>
     <footer>
         <script src="fnaf.js"></script>
-        <div>
-            <nav>
-                <a href="BiteO87.html">The Bite of 87</a>
-                <a href="fnaf.html">Home</a>
-                <a href="lore.html">The Lore</a>
-            </nav>
-        </div>
-        <div>
-            <h4>Contact info</h4>
-            <p>Email@fnafsillyguys.gov</p>
-            <p>333-333-3333</p>
-        </div>
+        <div id="footerStuff">
+            <div id="footerNav">
+                <nav id="youSuck">
+                    <a href="BiteO87.html">The Bite of 87</a>
+                    <a href="fnaf.html">Home</a>
+                    <a href="lore.html">The Lore</a>
+                </nav>
+            </div>
+            <div id="contactInfo">
+                <h4>Contact info</h4>
+                <p>Email@fnafsillyguys.gov</p>
+                <p>333-333-3333</p>
+            </div>
+         </div>
        
 
     </footer>
