--- a/Fnaf/lore.html
+++ b/Fnaf/lore.html
@@ -3,45 +3,52 @@
     <head>
         <title>But Hey, that's just a Theory...</title>
         <link rel="stylesheet" href="lore.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Fnaf (quite funny)">
+        <meta name="author" content="Miles Skousen (fnaf expert)">
+        <meta name="keywords" content="Fnaf, Freddy, Five Nights, AMONGUS">
 
     </head>
     <body>
-        <div>
-            <h1>The Lore...</h1>
-            <nav>
-                <a href="BiteO87.html">The Bite of 87</a>
-                <a href="fnaf.html">Home</a>
-                <a href="lore.html">The Lore</a>
-            </nav>
-        </div>
-        <div>
-            <h2>The origins...</h2>
-            <p>
-                Once upon a time, there were two silly guys and they owned a company with a pet bear. One day, this bear died
-                and they got a robot to replace it. This was freddy. Then they made more (the rest of them). But, the purple guy was very angry and went
-                on a spree and "accidently" made ghost children who haunted the robots. Now they try to eat you (they never got a last supper).
-            </p>
-        </div>
-        <div>
-            <h2>The story</h2>
-            <p>
-                According to a certain Mathew Patrick from the Game Theorists on the hit platfrom Youtube, now owned by Google.You play
-                 as silly Michael. This man is the son of the purple dude who, at them time, was a robot himself. Eventually he found his sister
-                (also a robot) and got ""Scooped"". Now he is also purple and trying to hunt his dad down to release the souls from the silly robots
-                But turns out, his dad's favorite catch phrase "i always come back" prevents him from this :(
-            </p>
-        </div>
-        <div>
-            <h2>Fun FNAF Facts</h2>
-            <ul>
-                <li>He Always comes back (the spring fellow who may also trap)</li>
-                <li>There are about 50 versions of Freddy (this is not a joke)</li>
-                <li>Toreador March is no longer commonly assoicated with the opera Carmen thanks to Freddy Fazbear</li>
-                <li>The movie took years to be finalized and released (since the 2nd game or so)</li>
-                <li>There are 8 official games (plus a few spin offs)</li>
-                <li>There are multiple book series about the game</li>
-                <li><h6>secret fact: har har har har har har har har har har</h6></li>
-            </ul>
+            <div>
+                <h1 id="title">The Lore...</h1>
+                <nav id="navBar">
+                    <a id="nav1" href="BiteO87.html">The Bite of 87</a>
+                    <a id="nav2" href="fnaf.html">Home</a>
+                    <a id="nav3" href="lore.html">The Lore</a>
+                </nav>
+            </div>
+        <div id="paragraphs">
+            <div id="firstPara">
+                <h2>The origins...</h2>
+                <p>
+                    Once upon a time, there were two silly guys and they owned a company with a pet bear. One day, this bear died
+                    and they got a robot to replace it. This was freddy. Then they made more (the rest of them). But, the purple guy was very angry and went
+                    on a spree and "accidently" made ghost children who haunted the robots. Now they try to eat you (they never got a last supper).
+                </p>
+            </div>
+            <div id="secondPara">
+                <h2>The story</h2>
+                <p>
+                    According to a certain Mathew Patrick from the Game Theorists on the hit platfrom Youtube, now owned by Google.You play
+                    as silly Michael. This man is the son of the purple dude who, at them time, was a robot himself. Eventually he found his sister
+                    (also a robot) and got ""Scooped"". Now he is also purple and trying to hunt his dad down to release the souls from the silly robots
+                    But turns out, his dad's favorite catch phrase "i always come back" prevents him from this :(
+                </p>
+            </div>
+            <div id="thirdPara">
+                <h2>Fun FNAF Facts</h2>
+                <ul>
+                    <li>He Always comes back (the spring fellow who may also trap)</li>
+                    <li>There are about 50 versions of Freddy (this is not a joke)</li>
+                    <li>Toreador March is no longer commonly assoicated with the opera Carmen thanks to Freddy Fazbear</li>
+                    <li>The movie took years to be finalized and released (since the 2nd game or so)</li>
+                    <li>There are 8 official games (plus a few spin offs)</li>
+                    <li>There are multiple book series about the game</li>
+                    <li><h6>secret fact: har har har har har har har har har har</h6></li>
+                </ul>
+            </div>
         </div>
 
     </body>
